objects/Statement__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Statement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Total_Amount__c  -  Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>TODAY()  + 15</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rental Agreement</label>
        <referenceTo>Rental_Agreement__c</referenceTo>
        <relationshipLabel>Statements</relationshipLabel>
        <relationshipName>Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Statement_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statement_no__c</fullName>
        <label>Statement no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Past Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Additional_Fees__c  +   Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Statement</label>
    <nameField>
        <label>Statement  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>